--- a/Addons-Maker/index.html
+++ b/Addons-Maker/index.html
@@ -14,6 +14,7 @@
       <div class="nav">
         <nav>
           <a href="/Addons-Maker">Addons Maker</a>
+          <a href="/Addons-Maker/Addons-Maker.zip">Descargar Addons Maker</a>
           <a href="/Addons-Maker/Plugins">Plugins</a>
           <a href="/Addons-Maker/Plugins/Doc">Plugins Doc</a>
         </nav>
