--- a/php/test.html
+++ b/php/test.html
@@ -4,7 +4,7 @@
     <title>PHP</title>
   </head>
   <body>
-    <form action='connection-bd.php' method='post'>
+    <form action='connection-bd.php' method='POST'>
       <input type='text' name='user'>
       <input type='password' name='password'>
       <button type='submit' name='send'>Send</button>
