--- a/seo/ChoesinCraft/index.html
+++ b/seo/ChoesinCraft/index.html
@@ -10,7 +10,8 @@
 	<link rel="stylesheet" href="/css/links.css" />
 	<link rel="stylesheet" href="/css/estilos.css" />
 	<link rel="stylesheet" href="/css/botones.css" />
-        <script src="/js/seo/ChoesinCraft.js"></script>
+  <script src="/js/seo/ChoesinCraft.js"></script>
+  <script src="/js/cifrar.js"></script>
 </head>
 
 <body>
