--- a/addons/Home/index.html
+++ b/addons/Home/index.html
@@ -37,15 +37,8 @@
         </div>
         <div class="contenedor">
           <div class="galeria-port">
-            <div class="imagen-craft">
-              <img src="/img/Home/icono.png" alt="" />
-            </div>
-          </div>
-        </div>
-        <div class="contenedor">
-          <div class="galeria-port">
             <div class="imagen-port">
-              <img src="/img/Home/icono.png" alt="" />
+              <img src="/img/addons/Home/icono.png" alt="" />
               <a id="download" href="https://www.mediafire.com/file/pf53mgo3mc8u03v/Home.mcaddon/file" target="_blank">
                 <div class="hover-galeria">
                   <img src="/img/click.png" alt="" />
