--- a/php/index.html
+++ b/php/index.html
@@ -1,5 +1,5 @@
 
-<form action="https://formsubmit.co/agacraft.addons@gmail.com" method="POST">
+<form action="https://formsubmit.co/9ce1b91fb27a5d5bafa6cbab0cdfab6a" method="POST">
      <input type="text" name="name" required>
      <input type="email" name="email" required>
      <button type="submit">Send</button>
